--- a/CRM_System/ChartsPage.xaml
+++ b/CRM_System/ChartsPage.xaml
@@ -65,10 +65,10 @@
         <DVC:Chart Grid.Column="1" Grid.Row="2" Canvas.Top="80" Canvas.Left="10" Name="LineChart"
            Background="#F1F4FB">
             <DVC:Chart.Series>
-                <DVC:LineSeries Title="Новые клиенты" 
+                <DVC:PieSeries Title="Новые клиенты" 
     		IndependentValueBinding="{Binding Path=Key}"
     		DependentValueBinding="{Binding Path=Value}">
-                </DVC:LineSeries>
+                </DVC:PieSeries>
             </DVC:Chart.Series>
         </DVC:Chart>
         <DVC:Chart Grid.Column="0" Grid.Row="2" Name="ColumnChartClient" Background="#F1F4FB">
