--- a/CRM_System/StatusRequestPage.xaml
+++ b/CRM_System/StatusRequestPage.xaml
@@ -29,21 +29,21 @@
             <TextBlock Text="Выполнен" FontSize="26"/>
             <TextBlock x:Name="TBlCompletedSum"  FontSize="20"/>
         </StackPanel>
-        <DataGrid Grid.Row="1" x:Name="DGRProcessed">
+        <DataGrid AutoGenerateColumns="False" Grid.Row="1" x:Name="DGRProcessed">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Предприятие" Width="*" Binding="{Binding Path=Client.TitleCompany}"/>
                 <DataGridTextColumn Header="Дата" Width="*" Binding="{Binding Path=DateRequest}"/>
                 <DataGridTextColumn Header="Сумма" Width="*" Binding="{Binding Path=Sum}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Grid.Row="1" Grid.Column="1" x:Name="DGRWay">
+        <DataGrid  AutoGenerateColumns="False" Grid.Row="1" Grid.Column="1" x:Name="DGRWay">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Предприятие" Width="*" Binding="{Binding Path=Client.TitleCompany}"/>
                 <DataGridTextColumn Header="Дата" Width="*" Binding="{Binding Path=DateRequest}"/>
                 <DataGridTextColumn Header="Сумма" Width="*" Binding="{Binding Path=Sum}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Grid.Row="1" Grid.Column="2" x:Name="DGRCompleted">
+        <DataGrid  AutoGenerateColumns="False" Grid.Row="1" Grid.Column="2" x:Name="DGRCompleted" >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Предприятие" Width="*" Binding="{Binding Path=Client.TitleCompany}"/>
                 <DataGridTextColumn Header="Дата" Width="*" Binding="{Binding Path=DateRequest}"/>
