--- a/CRM_System/MainWindow.xaml
+++ b/CRM_System/MainWindow.xaml
@@ -41,17 +41,16 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Image Source="Resources/logo.png" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Border Width="300" Height="200" Background="#F1F4FB" HorizontalAlignment="Center" VerticalAlignment="Center" CornerRadius="20" Grid.Row="1">
-            <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock Text="Авторизация" FontSize="25" FontFamily="Century Gothic" HorizontalAlignment="Center"/>
-                <TextBlock Text="Логин" FontSize="15" FontFamily="Century Gothic"/>
-                <TextBox x:Name="TB_Login" FontFamily="Century Gothic" Width="200"  Height="20"/>
-                <TextBlock Text="Пароль" FontSize="15" FontFamily="Century Gothic"/>
-                <PasswordBox x:Name="PasswordB"  Width="200" Height="20"/>
-            </StackPanel>
-        </Border>
-        <Button x:Name="Btn_Registration" Foreground="White" Content="Зарегистрироваться" Grid.Row="2" HorizontalAlignment="Left" Click="Btn_Registration_Click"/>
-        <Button x:Name="Btn_Autorization" Foreground="White" Content="Войти" Grid.Row="2" HorizontalAlignment="Right" Click="Btn_Autorization_Click"/>
+            <Border Width="300" Height="200" Background="#F1F4FB" HorizontalAlignment="Center" VerticalAlignment="Center" CornerRadius="20" Grid.Row="1">
+                <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock Text="Авторизация" FontSize="25" FontFamily="Century Gothic" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Логин" FontSize="15" FontFamily="Century Gothic"/>
+                    <TextBox x:Name="TB_Login" FontFamily="Century Gothic" Width="200"  Height="20"/>
+                    <TextBlock Text="Пароль" FontSize="15" FontFamily="Century Gothic"/>
+                    <PasswordBox x:Name="PasswordB"  Width="200" Height="20"/>
+                </StackPanel>
+            </Border>
+            <Button x:Name="Btn_Autorization" Foreground="White" Content="Войти" Grid.Row="2" HorizontalAlignment="Center" Click="Btn_Autorization_Click"/>
     </Grid>
     </Viewbox>
 </Window>
